--- a/healthtips.html
+++ b/healthtips.html
@@ -1,19 +1,191 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Health Tips</title>
         <link rel="stylesheet" type="text/css" href="./css/style.css" />
+        <script src="./javascript/javas.js"></script>
     </head>
-    <body>
+    <body id="htid">
         <header>
-            <nav class="navbar">
-                <a href="index.html">Home</a>
-                <a href="gallery.html">Gallery</a>
-                <a href="healthtips.html">Health Tips</a>
-                <a href="menu.html">Menu</a>
-                <a href="aboutus.html">About Us</a>
-                <a href="contactus.html">Contact Us</a>
-            </nav>
+            <div id="navbar">
+                <nav>
+                        <a href="index.html">Home</a>
+                        <a href="gallery.html">Gallery</a>
+                        <a href="healthtips.html">Health Tips</a>
+                        <a href="menu.html">Menu</a>
+                        <a href="aboutus.html">About Us</a>
+                        <a href="contactus.html">Contact Us</a>
+                </nav>
+            </div>
         </header>
+        <div id="healthtips">
+            <h1>8 tips for healthy eating</h1>
+            <p><b>These 8 practical tips cover the basics of healthy eating and can help you make healthier choices.</b><br><br>
+                The key to a healthy diet is to eat the right amount of calories for how active you are so you balance the energy you consume with the energy you use.
+<br>
+If you eat or drink more than your body needs, you'll put on weight because the energy you do not use is stored as fat. If you eat and drink too little, you'll lose weight.
+<br>
+You should also eat a wide range of foods to make sure you're getting a balanced diet and your body is receiving all the nutrients it needs.
+<br>
+It's recommended that men have around 2,500 calories a day (10,500 kilojoules). Women should have around 2,000 calories a day (8,400 kilojoules).
+<br>
+Most adults in the UK are eating more calories than they need and should eat fewer calories.
+                Most adults in the UK are eating more calories than they need and should eat fewer calories.
+            </p>
+            <div class="tips">
+                <h1><b>1. Base your meals on higher fibre starchy carbohydrates</b></h1>
+                <p>Starchy carbohydrates should make up just over a third of the food you eat. They include potatoes, bread, rice, pasta and cereals.
+<br>
+                    Choose higher fibre or wholegrain varieties, such as wholewheat pasta, brown rice or potatoes with their skins on.
+                    <br>
+                    They contain more fibre than white or refined starchy carbohydrates and can help you feel full for longer.
+                    <br>
+                    Try to include at least 1 starchy food with each main meal. Some people think starchy foods are fattening, but gram for gram the carbohydrate they contain provides fewer than half the calories of fat.
+                    <br>
+                    Keep an eye on the fats you add when you're cooking or serving these types of foods because that's what increases the calorie content – for example, oil on chips, butter on bread and creamy sauces on pasta</p>
+            <br></div>
+            <div class="tips">
+                <h1><b>
+                    2. Eat lots of fruit and veg
+                </b></h1>
+                <p>
+                    It's recommended that you eat at least 5 portions of a variety of fruit and veg every day. They can be fresh, frozen, canned, dried or juiced.
+                    Getting your 5 A Day is easier than it sounds. Why not chop a banana over your breakfast cereal, or swap your usual mid-morning snack for a piece of fresh fruit?
+                    A portion of fresh, canned or frozen fruit and vegetables is 80g. A portion of dried fruit (which should be kept to mealtimes) is 30g.
+                    A 150ml glass of fruit juice, vegetable juice or smoothie also counts as 1 portion, but limit the amount you have to no more than 1 glass a day as these drinks are sugary and can damage your teeth.
+                </p>
+            </div>
+            <div class="tips">
+                <h1><b>
+                    3. Eat more fish, including a portion of oily fish
+                </b></h1>
+                <p>
+                    Fish is a good source of protein and contains many vitamins and minerals.<br><br>
+                    Aim to eat at least 2 portions of fish a week, including at least 1 portion of oily fish.<br><br>
+                    Oily fish are high in omega-3 fats, which may help prevent heart disease. <br><br>
+                    <b>
+                    Oily fish include:<br><br>
+                    <ul>
+                        <li>Salmon</li>
+                        <li>Trout</li>
+                        <li>Serring</li>
+                        <li>Sardines</li>
+                        <li>Pilchards</li>
+                        <li>Mackerel</li>
+                    </ul>
+                    Non Oily fish include:<br><br>
+                    <ul>
+                        <li>Haddock</li>
+                        <li>Plaice</li>
+                        <li>Coley</li>
+                        <li>Cod</li>
+                        <li>Tuna</li>
+                        <li>Skate</li>
+                        <li>Hake</li>
+                    </ul>
+                    </b>
+                    You can choose from fresh, frozen and canned, but remember that canned and smoked fish can be high in salt.
+                    Most people should be eating more fish, but there are recommended limits for some types of fish.
+                </p>
+            </div>
+            <div class="tips">
+                <h1><b>
+                    4. Cut down on saturated fat and sugar
+                </b></h1>
+                <h2>Saturated fat</h2>
+                <p>
+                    You need some fat in your diet, but it's important to pay attention to the amount and type of fat you're eating.
+                    There are 2 main types of fat: saturated and unsaturated. Too much saturated fat can increase the amount of cholesterol in the blood, which increases your risk of developing heart disease.
+                    On average, men should have no more than 30g of saturated fat a day. On average, women should have no more than 20g of saturated fat a day.
+                    Children under the age of 11 should have less saturated fat than adults, but a low-fat diet is not suitable for children under 5.
+                    <b>
+                        Saturated fat is mainly found in foods, such as:
+                        <ul>
+                            <li>Fatty and cuts of meat</li>
+                            <li>Sausages</li>
+                            <li>Butter</li>
+                            <li>Hard cheese</li>
+                            <li>Cream</li>
+                            <li>Cakes</li>
+                            <li>Biscuits</li>
+                            <li>Lard</li>
+                            <li>Pies</li>
+                        </ul>
+                    </b>
+                    Try to cut down on your saturated fat intake and choose foods that contain unsaturated fats instead, such as vegetable oils and spreads, oily fish and avocados.
+                    For a healthier choice, use a small amount of vegetable or olive oil, or reduced-fat spread instead of butter, lard or ghee.
+                    When you're having meat, choose lean cuts and cut off any visible fat.
+                    All types of fat are high in energy, so they should only be eaten in small amounts.
+                </p>
+            </div>
+            <div class="tips">
+                <h1><b>
+                    5. Eat less salt: no more than 6g a day for adults
+                </b></h1>
+                <p>
+                    Eating too much salt can raise your blood pressure. People with high blood pressure are more likely to develop heart disease or have a stroke.
+                    Even if you do not add salt to your food, you may still be eating too much.
+                    About three-quarters of the salt you eat is already in the food when you buy it, such as breakfast cereals, soups, breads and sauces.
+                    Use food labels to help you cut down. More than 1.5g of salt per 100g means the food is high in salt.
+                    Adults and children aged 11 and over should eat no more than 6g of salt (about a teaspoonful) a day. Younger children should have even less.
+                </p>
+            </div>
+            <div class="tips">
+                <h1><b>
+                    6. Get active and be a healthy weight
+                </b></h1>
+                <p>
+                    As well as eating healthily, regular exercise may help reduce your risk of getting serious health conditions. It's also important for your overall health and wellbeing.
+<br><br>
+Read more about the benefits of exercise and physical activity guidelines for adults.
+<br><br>
+Being overweight or obese can lead to health conditions, such as type 2 diabetes, certain cancers, heart disease and stroke. Being underweight could also affect your health.
+<br><br>
+Most adults need to lose weight by eating fewer calories.
+<br><br>
+If you're trying to lose weight, aim to eat less and be more active. Eating a healthy, balanced diet can help you maintain a healthy weight.
+<br><br>
+Check whether you're a healthy weight by using the BMI healthy weight calculator.
+<br><br>
+Start the NHS weight loss plan, a 12-week weight loss guide that combines advice on healthier eating and physical activity.
+<br><br>
+If you're underweight, see underweight adults. If you're worried about your weight, ask your GP or a dietitian for advice.
+                </p>
+            </div>
+            <div class="tips">
+                <h1><b>
+                    7. Do not get thirsty
+                </b></h1>
+                <p>
+                    You need to drink plenty of fluids to stop you getting dehydrated. The government recommends drinking 6 to 8 glasses every day. This is in addition to the fluid you get from the food you eat. 
+<br><br>
+All non-alcoholic drinks count, but water, lower fat milk and lower sugar drinks, including tea and coffee, are healthier choices. 
+<br><br>
+Try to avoid sugary soft and fizzy drinks, as they're high in calories. They're also bad for your teeth. 
+<br><br>
+Even unsweetened fruit juice and smoothies are high in free sugar.
+<br><br>
+Your combined total of drinks from fruit juice, vegetable juice and smoothies should not be more than 150ml a day, which is a small glass.
+<br><br>
+Remember to drink more fluids during hot weather or while exercising.
+                </p>
+            </div>
+            <div class="tips">
+                <h1><b>
+                    8. Do not skip breakfast
+                </b></h1>
+                <p>
+                    Some people skip breakfast because they think it'll help them lose weight.
+<br><br>
+                    But a healthy breakfast high in fibre and low in fat, sugar and salt can form part of a balanced diet, and can help you get the nutrients you need for good health.
+                    <br><br>
+                    A wholegrain lower sugar cereal with semi-skimmed milk and fruit sliced over the top is a tasty and healthier breakfast. 
+                </p>
+            </div>
+        </div>
     </body>
 </html>
