--- a/index.html
+++ b/index.html
@@ -1,25 +1,51 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>BKM Restaurant</title>
-        <link rel="stylesheet" type="text/css" href="/css/style.css" />
-        <script src="/javascript/javas.js"></script>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Restaurant</title>
+        <link rel="stylesheet" type="text/css" href="./css/style.css" />
+        <script src="./javascript/javas.js"></script>
     </head>
-    <body id="homepage">
+    <body id="headname" background="./images/homeimg.jpg">
         <div id="navbar">
             <nav>
+                    <div style="margin-left: 180px;">
                     <a href="index.html">Home</a>
                     <a href="gallery.html">Gallery</a>
                     <a href="healthtips.html">Health Tips</a>
                     <a href="menu.html">Menu</a>
                     <a href="aboutus.html">About Us</a>
                     <a href="contactus.html">Contact Us</a>
-                </nav>
+                    </div>
+            </nav>
         </div>
+
         <div id="w2r">
-            <h1>Welcome to the Restaurant</h1>
-            <h2>--- Our Specialities ---</h2>
-            We are strongly focussed in the Indian food, which turns out to a unique style of our restaurant.
+            <h1>Welcome to the Smile Restaurant</h1>
+            <p></p>
         </div>
+        <div>
+            <h1>Todays Special Offers.</h1>
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
     </body>
 </html>
