--- a/gallery.html
+++ b/gallery.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Our Gallery</title>
         <link rel="stylesheet" type="text/css" href="./css/style.css" />
     </head>
