commit 28th modif

--- a/contactus.html
+++ b/contactus.html
@@ -10,13 +10,14 @@
     </head>
     <body>
         <header>
-            <nav class="navbar">
-                <a href="index.html">Home</a>
-                <a href="gallery.html">Gallery</a>
-                <a href="healthtips.html">Health Tips</a>
-                <a href="menu.html">Menu</a>
-                <a href="aboutus.html">About Us</a>
-                <a href="contactus.html">Contact Us</a>
+            <nav id="navbar">
+                <div style="margin-left: 180px;">
+                    <a href="index.html">Home</a>
+                    <a href="gallery.html">Gallery</a>
+                    <a href="healthtips.html">Health Tips</a>
+                    <a href="menu.html">Menu</a>
+                    <a href="contactus.html">Contact Us</a>
+                    </div>
             </nav>
         </header>
     </body>
