--- a/healthtips.html
+++ b/healthtips.html
@@ -13,12 +13,13 @@
         <header>
             <div id="navbar">
                 <nav>
-                        <a href="index.html">Home</a>
-                        <a href="gallery.html">Gallery</a>
-                        <a href="healthtips.html">Health Tips</a>
-                        <a href="menu.html">Menu</a>
-                        <a href="aboutus.html">About Us</a>
-                        <a href="contactus.html">Contact Us</a>
+                        <div style="margin-left: 180px;">
+                            <a href="index.html">Home</a>
+                            <a href="gallery.html">Gallery</a>
+                            <a href="healthtips.html">Health Tips</a>
+                            <a href="menu.html">Menu</a>
+                            <a href="contactus.html">Contact Us</a>
+                            </div>
                 </nav>
             </div>
         </header>
