--- a/menu.html
+++ b/menu.html
@@ -11,12 +11,13 @@
   <body id="menuid">
     <div id="navbar">
       <nav>
-              <a href="index.html">Home</a>
-              <a href="gallery.html">Gallery</a>
-              <a href="healthtips.html">Health Tips</a>
-              <a href="menu.html">Menu</a>
-              <a href="aboutus.html">About Us</a>
-              <a href="contactus.html">Contact Us</a>
+        <div style="margin-left: 180px;">
+          <a href="index.html">Home</a>
+          <a href="gallery.html">Gallery</a>
+          <a href="healthtips.html">Health Tips</a>
+          <a href="menu.html">Menu</a>
+          <a href="contactus.html">Contact Us</a>
+          </div>
           </nav>
     </div>
     <section class = "menu">
