--- a/index.html
+++ b/index.html
@@ -1,50 +1,185 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Restaurant</title>
-        <link rel="stylesheet" type="text/css" href="./css/style.css" />
-        <script src="./javascript/javas.js"></script>
-    </head>
-    <body id="headname" background="./images/homeimg.jpg">
-        <div id="navbar">
-            <nav>
-                    <div style="margin-left: 180px;">
-                    <a href="index.html">Home</a>
-                    <a href="gallery.html">Gallery</a>
-                    <a href="healthtips.html">Health Tips</a>
-                    <a href="menu.html">Menu</a>
-                    <a href="contactus.html">Contact Us</a>
-                    </div>
-            </nav>
-        </div>
 
-        <div id="w2r">
-            <h1>Welcome to the Smile Restaurant</h1>
-            <p></p>
-        </div>
-        <div>
-            <h1>Todays Special Offers.</h1>
-        </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-    </body>
-</html>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252"><title>smile restaurant</title>
+	<link rel="stylesheet" type="text/css" href="./css/style.css" />
+	<script src="./javascript/javas.js"></script>
+<style>
+
+	body{	
+			margin-top: 110px;
+			font-family:algerian;
+			color:white;
+			background: linear-gradient(rgba(0,0,0,1),rgba(0,0,0,0.65),rgba(0,0,0,0.65),rgba(0,0,0,0.38),rgba(0,0,0,0))	
+				,url(./images/pizza1.jpeg)no-repeat;
+			background-size: cover;}
+
+	.box{ width: 900px;
+	float:right;
+	border:1px solid none;}
+	
+	.box ul li{
+		width: 120px;
+		float: left;
+		margin: 10px auto;
+		text-align: center;}
+
+	.wd{
+		width: 150px;
+		height:750px;
+		background-color: black;
+		opacity: 0.9;
+		padding: 45px;
+	   }
+
+	.wd h1{
+		text-align: center;
+		text-transform: uppercase;
+		font-weight: 100px;
+	    }
+	
+	.wd h3:hover{
+		background-color:green}
+	
+	.wd ul li:hover{
+		transition: 0.7s;
+		border-radius: 5px;
+		padding: 5px;
+		background-color:rgb(117, 117, 117)
+		}
+
+	.wd1{
+		border-radius: 10px;
+		width: 250px;
+		height:480px;
+		background-color:black;
+		opacity: 0.9;
+		padding: 14px;
+		float:right;
+		margin-top:-370px;
+		margin-right:-720px;	   
+		}
+
+	.wd2{
+		border-radius: 10px;
+		width: 350px;
+		height:680px;
+		background-color:black;
+		opacity: 0.9;
+		padding: 10px;
+		float:right;
+		margin-top:-550px;
+		margin-right:-1100px;	   
+		}
+
+
+	.wd3{
+		width:370px;
+		height:80px;
+		opacity: 0.9;
+		padding: 10px;
+		float:right;
+		margin-top:10px;
+		margin-right:640px;
+		color:yellow	   
+		}
+
+	.wd4{
+		border-radius: 10px;
+		width:250px;
+		height:150px;
+		background-color:black;
+		opacity: 0.9;
+		padding: 10px;
+		float:right;
+		margin-top:-550px;
+		margin-right:-720px;	   
+		}
+	.wd5{
+		border-radius: 10px;
+		background-color:gray;
+		opacity: 0.9;
+		padding: 12px;
+		float:right;
+		margin-right:-30px;	   
+		margin-top:50px;
+		}
+		a{
+			color: aqua;
+		}
+
+	.zoom{
+	transition:transform 1s;}
+	.zoom:hover
+	{transform:scale(1.1);}
+
+</style>
+
+</head><body>
+	<div id="navbar">
+		<nav>
+				<div style="margin-left: 180px;">
+				<a href="index.html">Home</a>
+				<a href="gallery.html">Gallery</a>
+				<a href="healthtips.html">Health Tips</a>
+				<a href="menu.html">Menu</a>
+				<a href="contactus.html">Contact Us</a>
+				</div>
+		</nav>
+	</div>
+	<h1><u><p class="wd3" text-align="center"><marquee width="248%">:)SMILE RESTAURANT:)</marquee></p></u></h1>
+	
+	<div class="wd"><h1 text-align="center"> WELCOME :)</h1><brs>
+
+	<h3 text-align="center">Today's Offer :</h3><br>
+
+	<ul>
+		<li><a href="#">40% off on orders above 1000</a></li><br>
+		<li><a href="#">Free diet Coke worth 49-/ with <br>2 Schezwan Burger</a></li><br>
+		<li><a href="#">2 large pizza at 199 each</a></li><br>
+		<li><a href="#">Flat 50% on visting 1st time(use Promo Code FIRST2021)</a></li><br>
+	</ul>
+
+<div id="divleft" class="wd1">
+	<u><h1>Meal of the day :</h1></u>
+
+
+	<h2 text-align="left"><p style="color:orange";align="center"><u>BIG B BURGER </u></p></h2>
+<p style="color:yellow" text-align="center">TWO Good <br>
+TWO Be True<br></p>
+<h5><p style="font-family:georgia,garamond,serif;font-size:16px;align:center">Two yummy paties squeezed together in one hug ..</p></h5>
+
+		<img src="./images/burger.jpeg" height="32.3%" width="100%" class="zoom"><br>
+		
+	</div>
+
+	<div class="wd2">
+	<u><h1>SMILE'S SPECIAL<br></h1></u>
+	
+	
+<br>
+	<h3>1. Deluxe veg cheese loaded pizza</h3>
+	<img src="./images/pizza2.jpeg" class="zoom" height="35%" width="100%">
+	<h3 style="text-align: center;" >2. Momo's Combo</h3>
+	<img src="./images/momos.jpeg" class="zoom" height="26.5%" width="100%"><br>
+	</div>
+	
+	<div class="wd4">
+	<form><h2>Book Now :</h2><input type="text" placeholder="Name" name=""><input type="text" placeholder="Number of Table" name=""><input type="submit" value="Submit" name=""><table>
+<tbody><tr></tr>
+<tr></tr>
+<tr></tr>
+<tr></tr>
+	
+
+</tbody></table>
+</form></div>
+
+<div class="wd5">
+<form>
+<input type="text" placeholder="Feedback">
+<input type="submit" value="Submit" name="">
+</form></div>
+
+
+
+
+</brs></div></body></html>
