--- a/healthtips.html
+++ b/healthtips.html
@@ -9,7 +9,8 @@
         <link rel="stylesheet" type="text/css" href="./css/style.css" />
         <script src="./javascript/javas.js"></script>
     </head>
-    <body id="htid">
+    <body id="htid" style="background: linear-gradient(rgba(0,0,0,1),rgba(0,0,0,0.65),rgba(0,0,0,0.65),rgba(0,0,0,0.38),rgba(0,0,0,0))	
+    ,url(./images/pizza1.jpeg);">
         <header>
             <div id="navbar">
                 <nav>
