--- a/menu.html
+++ b/menu.html
@@ -7,6 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Food Menu</title>
     <link rel="stylesheet" href="./css/style.css">
+    <style>
+      *{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+    </style>
   </head>
   <body id="menuid">
     <div id="navbar">
