--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252"><title>smile restaurant</title>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252"><title>Smile Restaurant</title>
 	<link rel="stylesheet" type="text/css" href="./css/style.css" />
 	<script src="./javascript/javas.js"></script>
 <style>
@@ -118,7 +118,6 @@
 		<nav>
 				<div style="margin-left: 180px;">
 				<a href="index.html">Home</a>
-				<a href="gallery.html">Gallery</a>
 				<a href="healthtips.html">Health Tips</a>
 				<a href="menu.html">Menu</a>
 				<a href="contactus.html">Contact Us</a>
